# embedded-react

./: .clang-format  .clang-format-ignore  .gitignore  .prettierignore  .prettierrc.cjs  BRIDGE.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  ENGINE.md  NOTICE  PLAN.md  README.md  ROADMAP.md  RULES.md  SIMULATOR.md  WASM_SIM.md  idf_component.yml  library.json
backends/sdl/: CMakeLists.txt  README.md  renderer_backend.c  sdl_backend.h
bridges/quickjs/: CMakeLists.txt  README.md  compile_main.c  er_assets.c  er_assets.h  er_hotreload.c  er_hotreload.h  er_runtime.c  er_runtime.h  native_ui_bridge.c  native_ui_bridge.h  runtest_main.c  smoke_main.c  splittest_main.c
bridges/quickjs/js/: README.md  build.mjs  cli.mjs  create-embedded-react.mjs  pack-container.mjs  package-lock.json  package.json  parity.mjs  persist-transform.mjs  qjsc-wasm.mjs  sim-server.mjs  sim.mjs  tsconfig.types.json  vitest.config.js
bridges/quickjs/js/__tests__/: persist-transform.unit.test.mjs
bridges/quickjs/js/aot/: compile.mjs  screenshot-smoke.mjs  style-map.mjs
bridges/quickjs/js/aot/__tests__/: cc-compile.smoke.unit.test.js  compile.unit.test.js  demos.smoke.unit.test.js  typescript.unit.test.js
bridges/quickjs/js/app/: App.jsx  index.jsx
bridges/quickjs/js/assets/: bake-font.mjs  bake-image.mjs  bake-svg.mjs  build-builtin-font.mjs  emit-c.mjs  emit-container.mjs  emit-pack.mjs  index.mjs  rasterize.mjs  svg-loader.mjs
bridges/quickjs/js/assets/__tests__/: assets.unit.test.js  bake-svg.unit.test.js  container.unit.test.js  svg-loader.unit.test.js
bridges/quickjs/js/hotreload/: dev-device.mjs  pack-app.mjs  pack-split.mjs  protocol.mjs  refresh-runtime.js  uploader.mjs  watch-tree.mjs
bridges/quickjs/js/hotreload/__tests__/: device-detect.unit.test.mjs  pack-split.unit.test.mjs  protocol.unit.test.mjs  watch-tree.unit.test.mjs
bridges/quickjs/js/src/: App.jsx  components.js  host-config.js  index.jsx  native-ui.js  props.js  renderer.js
bridges/quickjs/js/src/__tests__/: fast-refresh-integration.unit.test.js  node-teardown.unit.test.js  persist-transform.unit.test.js  props.unit.test.js  text-spans.unit.test.js
bridges/quickjs/js/src/embedded-react/: Animated.js  AppRegistry.js  Easing.js  LayoutAnimation.js  Platform.js  StyleSheet.js  components.js  imperative.js  index.d.ts  index.js  layout-anim-config.js  split-style.js  svg-ops.js  usePersistentState.js
bridges/quickjs/js/src/embedded-react/__tests__/: animated-loop.unit.test.js  layout-animation.unit.test.js  soft-reload.unit.test.js  split-style.unit.test.js  style-sheet.unit.test.js  svg-ops.unit.test.js  (+1 more)
bridges/quickjs/js/test/runtime/: anim-compose.runtime.test.js  animated.runtime.test.jsx  effects.runtime.test.jsx  harness.js  image.runtime.test.jsx  interpolate-extrapolate.runtime.test.js  layout-anim.runtime.test.jsx  persistent-state.runtime.test.jsx  reorder.runtime.test.jsx  run.mjs  split-roundtrip.mjs  svg.runtime.test.jsx  text-spans.runtime.test.jsx  timers.runtime.test.js  use-animated-value.runtime.test.jsx
bridges/quickjs/overlay/: message_overlay.js  message_overlay.qbc.c  message_overlay.qbc.h
engine/: CMakeLists.txt  README.md  idf_component.yml
engine/animation/: animation.c  layout_anim.c  layout_anim.h
engine/core/: er_parallel.c  native_renderer.c  renderer_internal.h
engine/font/: font_bitmap.c  font_bitmap.h  font_blob.c  font_blob.h  font_data.c  font_registry.c  font_registry.h
engine/include/: er_scene.h  er_version.h  font_bitmap.h  native_renderer.h  perf_overlay.h
engine/layout/: layout_engine.c  layout_engine.h
engine/platform/: README.md
engine/rendering/: canvas_bindings.c  gradient.c  gradient.h  image_registry.c  image_registry.h  image_scaler.c  image_scaler.h  perf_overlay.c  rrect.c  rrect.h  scratch_pool.c  scratch_pool.h  shadow.c  shadow.h  transform.c  transform.h  vector.c  vector.h  vector_store.c
engine/scene/: compositor.c  er_node_internal.h  hit_test.c
engine/tests/animation/: CMakeLists.txt  test_animation.c  test_interpolate.c  test_layout_anim.c
engine/tests/input/: CMakeLists.txt  test_input.c
engine/tests/layout/: CMakeLists.txt  test_layout.c  test_yoga_parity.c
engine/tests/rendering/: CMakeLists.txt  test_components.c  test_gradient.c  test_image.c  test_multibuffer.c  test_opacity.c  test_parallel.c  test_rrect.c  test_scratch_copy.c  test_shadow.c  test_transform.c  test_transform_damage.c  test_vector.c
engine/tests/resources/: CMakeLists.txt  test_resources.c
engine/tests/scene/: CMakeLists.txt  test_node_pool.c
engine/tests/scroll/: CMakeLists.txt  test_scroll.c
engine/tests/text/: CMakeLists.txt  test_text.c
engine/text/: text_renderer.c  text_renderer.h
examples/esp32/components/er-bridge-quickjs/: CMakeLists.txt
examples/esp32/components/quickjs/: CMakeLists.txt
examples/esp32/esp32-2432s028r/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
examples/esp32/esp32-2432s028r/components/engine/: CMakeLists.txt
examples/esp32/esp32-2432s028r/components/esp32-spi-lcd-backend/: CMakeLists.txt
examples/esp32/esp32-2432s028r/main/: CMakeLists.txt  board.c  board.h  main.c
examples/esp32/esp32-s3/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/esp32/esp32-s3/components/engine/: CMakeLists.txt  linker_psram.lf
examples/esp32/esp32-s3/components/er-bridge-quickjs/: CMakeLists.txt
examples/esp32/esp32-s3/components/esp32-lcd-backend/: CMakeLists.txt
examples/esp32/esp32-s3/components/quickjs/: CMakeLists.txt
examples/esp32/esp32-s3/main/: CMakeLists.txt  board.c  board.h  hotreload_usb.c  hotreload_usb.h  main.c
examples/esp32/main/: CMakeLists.txt  board.c  board.h  main.c
examples/linux/: CMakeLists.txt  README.md  compile_bytecode.cmake  copy_bundle.cmake  copy_config.cmake  host.c  host.h  main.c  main_js.c
examples/linux-aot/: CMakeLists.txt  main.c
tools/simulator/: CMakeLists.txt  README.md  asset_pack.c  asset_pack.h  sim_main.c
tools/web-sim/: CMakeLists.txt  README.md  build.mjs  bundle-app.mjs  dev.mjs  index.html  serve.mjs
(+104 files in other folders)
